chre: conflicts resolved.

--- a/locales/de-DE.json
+++ b/locales/de-DE.json
@@ -6,7 +6,7 @@
   "header": {
     "home": "Startseite",
     "submit": "Ressource einreichen",
-    "tips": "Umwelt-Tipps"
+    "admin": "Verwaltung"
   },
   "submit": {
     "title": "Ressource einreichen",
