--- a/locales/vi_VN.json
+++ b/locales/vi_VN.json
@@ -6,7 +6,7 @@
   "header": {
     "home": "trang chủ",
     "submit": "gửi tài nguyên",
-    "tips": "mẹo sinh thái"
+    "admin": "quản trị"
   },
   "submit": {
     "title": "Gửi tài nguyên",
